# retrospecter

./: LICENSE  README.ja.md  README.md
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  release.yml
repo-retrospecter/: .env.example  .gitignore  README.ja.md  README.md  pyproject.toml  tasks.json
repo-retrospecter/.github/actions/setup-uv/: action.yml
repo-retrospecter/.github/workflows/: ci.yml
repo-retrospecter/src/repo_retrospect/: __init__.py
repo-retrospecter/src/repo_retrospect/cache/: __init__.py  store.py
repo-retrospecter/src/repo_retrospect/cli/: __init__.py  logging.py  main.py
repo-retrospecter/src/repo_retrospect/config/: __init__.py  settings.py
repo-retrospecter/src/repo_retrospect/models/: __init__.py  cache.py  comment.py  knowledge.py  pull_request.py
repo-retrospecter/src/repo_retrospect/pipeline/: fetch.py  generate.py  run.py
repo-retrospecter/src/repo_retrospect/services/: classifier.py  exceptions.py  fetcher.py
repo-retrospecter/src/repo_retrospect/services/renderer/: __init__.py  ai.py  base.py  human.py
repo-retrospecter/src/repo_retrospect/services/renderer/templates/: human.md.j2
repo-retrospecter/src/repo_retrospecter/: __init__.py
repo-retrospecter/src/repo_retrospecter/cache/: __init__.py  store.py
repo-retrospecter/src/repo_retrospecter/cli/: __init__.py  logging.py  main.py
repo-retrospecter/src/repo_retrospecter/config/: __init__.py  settings.py
repo-retrospecter/src/repo_retrospecter/models/: __init__.py  cache.py  commit.py  knowledge.py  pull_request.py  theme.py
repo-retrospecter/src/repo_retrospecter/pipeline/: fetch.py  generate.py  run.py
repo-retrospecter/src/repo_retrospecter/services/: classifier.py  fetcher.py
repo-retrospecter/src/repo_retrospecter/services/renderer/: __init__.py  ai.py  base.py  human.py
repo-retrospecter/src/repo_retrospecter/services/renderer/templates/: ai.md.j2  human.md.j2
repo-retrospecter/tests/: conftest.py  test_acceptance.py  test_cache_store.py  test_classifier.py  test_cli.py  test_fetcher.py  test_models.py  test_pipeline.py  test_renderer.py
repo-retrospecter/tests/fixtures/: inline_comments.json  issue_comments.json  pr_list.json  pr_reviews.json
session-retrospecter/: .gitignore  README.ja.md  README.md  pyproject.toml
session-retrospecter/.github/workflows/: ci.yml
session-retrospecter/src/session_retrospecter/cache/: __init__.py  store.py
session-retrospecter/src/session_retrospecter/cli/: main.py
session-retrospecter/src/session_retrospecter/models/: __init__.py  cache.py  event.py  extraction.py  knowledge.py  redact.py  summary.py  target.py
session-retrospecter/src/session_retrospecter/pipeline/: __init__.py  extract.py  fetch.py  generate.py  run.py
session-retrospecter/src/session_retrospecter/services/: classifier.py  exceptions.py  extractor.py  fetcher.py  redactor.py
session-retrospecter/src/session_retrospecter/services/renderer/: __init__.py  _env.py  ai.py  human.py
session-retrospecter/src/session_retrospecter/services/renderer/templates/: ai.md.j2  human.md.j2
session-retrospecter/tests/: conftest.py  test_acceptance.py  test_cache_store.py  test_classifier.py  test_cli.py  test_exceptions.py  test_extractor.py  test_fetcher.py  test_models.py  test_pipeline.py  test_redactor.py  test_renderer.py
session-retrospecter/tests/fixtures/cassettes/: classify_multi.yaml  classify_single.yaml
session-retrospecter/tests/fixtures/expected/: ai_correction.md  human_correction.md
session-retrospecter/tests/fixtures/sessions/: correction_en.jsonl  mixed.jsonl  sample_with_secrets.jsonl  tool_pitfall.jsonl  validated_pattern.jsonl
