[project]
name = "repo-retrospecter"
version = "0.1.0"
description = "LLM-powered retrospective generator from GitHub PR history"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "repo-retrospecter contributors" },
]
dependencies = [
    "anthropic>=0.40,<1.0",
    "click>=8.1,<9.0",
    "pydantic>=2.5,<3.0",
    "jinja2>=3.1,<4.0",
    "rich>=13.0,<15.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[project.scripts]
repo-retrospecter = "repo_retrospecter.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_retrospecter"]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-vcr>=1.0,<2.0",
    "ruff>=0.6,<1.0",
    "pyright>=1.1,<2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
strict = ["src/**/*.py"]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "acceptance: end-to-end acceptance tests (slow, require fixtures)",
    "slow: long-running tests excluded from the default invocation (CI runs them in a separate job)",
]
